Windows 32 bit build enabled, fix #124

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,10 @@ execute_process(COMMAND node -p "process.platform"
 string(REPLACE "\n" "" NODE_PLATFORM ${NODE_PLATFORM})
 string(REPLACE "\"" "" NODE_PLATFORM ${NODE_PLATFORM})
 
+# node version
+execute_process(COMMAND node -v WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_VARIABLE NODE_VERSION)
+string(REPLACE "\n" "" NODE_VERSION ${NODE_VERSION})
+
 # node abi version
 execute_process(COMMAND node -p "process.versions.modules"
         WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
@@ -41,64 +45,48 @@ execute_process(COMMAND node -p "require('node-addon-api').include"
 string(REPLACE "\n" "" NAPI_INCLUDE_DIR ${NAPI_INCLUDE_DIR})
 string(REPLACE "\"" "" NAPI_INCLUDE_DIR ${NAPI_INCLUDE_DIR})
 
-# NodeJS headers path
-if (NOT DEFINED ENV{NODE_HEADERS_DIR})
-    if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows") # Try defaults if not defined
-        execute_process(COMMAND cmd /c npm -g root
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            OUTPUT_VARIABLE NODE_HEADERS_DIR
-        )
-        string(REPLACE "\\" "/" NODE_HEADERS_DIR ${NODE_HEADERS_DIR})
-        string(CONCAT NODE_HEADERS_DIR ${NODE_HEADERS_DIR} "/../include/node")
-    else()
-        execute_process(COMMAND npm -g root
-            WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-            OUTPUT_VARIABLE NODE_HEADERS_DIR
-        )
-        string(CONCAT NODE_HEADERS_DIR ${NODE_HEADERS_DIR} "/../../include/node")
-    endif()
-    string(REPLACE "\n" "" NODE_HEADERS_DIR ${NODE_HEADERS_DIR})
+# NodeJS headers download, if needed
+if (DEFINED ENV{NVM_DIR})
+    set (NODEJS_HOME "$ENV{NVM_DIR}/versions/node")
+elseif (DEFINED ENV{NVM_HOME})
+    set (NODEJS_HOME "$ENV{NVM_HOME}")
+else()
+    message (FATAL_ERROR "NVM not found")
 endif()
 
-# download headers
-if (NOT EXISTS "${NODE_HEADERS_DIR}")
-    execute_process(COMMAND node -v WORKING_DIRECTORY ${CMAKE_SOURCE_DIR} OUTPUT_VARIABLE NODE_HEADERS_VERSION)
-    string(REPLACE "\n" "" NODE_HEADERS_VERSION ${NODE_HEADERS_VERSION})
-    set(NODE_HEADERS_FILENAME "node-${NODE_HEADERS_VERSION}-headers.tar.gz")
-    set(NODE_HEADERS_DIR "${CMAKE_CURRENT_BINARY_DIR}")
-    set(NODE_HEADERS_ARCHIVE_PATH ${NODE_HEADERS_DIR}/${NODE_HEADERS_FILENAME})
-    message("Downloading ${NODE_HEADERS_FILENAME} to: ${NODE_HEADERS_DIR}")
-    file(DOWNLOAD "https://nodejs.org/download/release/${NODE_HEADERS_VERSION}/${NODE_HEADERS_FILENAME}" "${NODE_HEADERS_ARCHIVE_PATH}" SHOW_PROGRESS)
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+	set(NODE_HEADERS_INCLUDE_DIR "${NODEJS_HOME}/${NODE_VERSION}/include/node")
+else()
+	execute_process(COMMAND npm -g root
+		WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+		OUTPUT_VARIABLE NODE_HEADERS_INCLUDE_DIR
+	)
+	string(CONCAT NODE_HEADERS_INCLUDE_DIR ${NODE_HEADERS_INCLUDE_DIR} "/../../include/node")
+endif()
+string(REPLACE "\n" "" NODE_HEADERS_INCLUDE_DIR ${NODE_HEADERS_INCLUDE_DIR})
 
-    if (NOT EXISTS "${NODE_HEADERS_ARCHIVE_PATH}")
-        message(FATAL_ERROR "Not found: ${NODE_HEADERS_ARCHIVE_PATH}")
-    else()
-        execute_process(COMMAND tar -xzf ${NODE_HEADERS_ARCHIVE_PATH})
-        file(REMOVE ${NODE_HEADERS_ARCHIVE_PATH})
-        set(NODE_HEADERS_DIR "${NODE_HEADERS_DIR}/node-${NODE_HEADERS_VERSION}/include/node")
-        if (NOT EXISTS "${NODE_HEADERS_DIR}")
-            message(FATAL_ERROR "NodeJS headers missing: ${NODE_HEADERS_DIR}")
-        endif()
-    endif()
+if (NOT EXISTS "${NODE_HEADERS_INCLUDE_DIR}")
+    set(NODE_HEADERS_FILENAME "node-${NODE_VERSION}-headers.tar.gz")
+    set(NODE_HEADERS_DOWNLD_PATH ${CMAKE_CURRENT_BINARY_DIR}/${NODE_HEADERS_FILENAME})
+    message("Downloading ${NODE_HEADERS_FILENAME} to ${NODE_HEADERS_DOWNLD_PATH} ...")
+    file(DOWNLOAD "https://nodejs.org/download/release/${NODE_VERSION}/${NODE_HEADERS_FILENAME}" "${NODE_HEADERS_DOWNLD_PATH}" ) # SHOW_PROGRESS)
+    file(DOWNLOAD "https://nodejs.org/download/release/${NODE_VERSION}/${NODE_HEADERS_FILENAME}" "${NODE_HEADERS_DOWNLD_PATH}" ) # SHOW_PROGRESS)
+
+    execute_process(COMMAND tar -xzf ${NODE_HEADERS_DOWNLD_PATH})
+    file(REMOVE ${NODE_HEADERS_DOWNLD_PATH})
+	file(RENAME "${CMAKE_CURRENT_BINARY_DIR}/node-${NODE_VERSION}/include" "${NODEJS_HOME}/${NODE_VERSION}/include")
 endif()
 
 # build and binding path
 string(CONCAT ADDON_BINDING_PATH "node-v" ${NODE_ABI_VERSION} "-" ${NODE_PLATFORM} "-" ${NODE_ARCH} )
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}\\lib\\binding\\)
-    string(REPLACE "/" "\\" CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}) # CMAKE_SOURCE_DIR with / on Windows ??
-else()
-    set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/binding/)
-endif()
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib/binding/)
 
 # sapnwrfc dependencies
+set(SAPNWRFC_INCLUDE_DIR $ENV{SAPNWRFC_HOME}/include)
+set(SAPNWRFC_LIB_DIR $ENV{SAPNWRFC_HOME}/lib)
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    set(SAPNWRFC_INCLUDE_DIR $ENV{SAPNWRFC_HOME}\\include)
-    set(SAPNWRFC_LIB_DIR $ENV{SAPNWRFC_HOME}\\lib)
     set(SAPNWRFC_LIB_FILES sapnwrfc.lib libsapucum.lib)
 else()
-    set(SAPNWRFC_INCLUDE_DIR $ENV{SAPNWRFC_HOME}/include)
-    set(SAPNWRFC_LIB_DIR $ENV{SAPNWRFC_HOME}/lib)
     set(SAPNWRFC_LIB_FILES -lsapnwrfc -lsapucum)
 endif()
 
@@ -114,10 +102,13 @@ if ( MSVC )
     COMMENT "Copying to output directory" ${CMAKE_LIBRARY_OUTPUT_DIRECTORY})
 endif ( MSVC )
 
+#
 # build
+#
+
+# All platforms
 
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fno-exceptions")
-
 #target_compile_options(${PROJECT_NAME} PUBLIC -fno-exceptions)
 
 # https://launchpad.support.sap.com/#/notes/2573953
@@ -134,7 +125,7 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 
 if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
 
-    # display SAP NWRFC SDK version
+    # show SAP NWRFC SDK version
     execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ci/utils/nwrfcsdk-version-linux.sh OUTPUT_VARIABLE SAPNWRFCSDK_VERSION)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
@@ -146,28 +137,14 @@ if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
         __NO_MATH_INLINES)
 
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
-    # display SAP NWRFC SDK version
+
+    # show SAP NWRFC SDK version
     execute_process(
         COMMAND "${CMAKE_CURRENT_SOURCE_DIR}\\ci\\utils\\nwrfcsdk-version.bat"
         OUTPUT_VARIABLE SAPNWRFCSDK_VERSION)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
     # https://docs.microsoft.com/en-us/cpp/build/reference/compiler-options-listed-alphabetically
-    target_compile_definitions(${PROJECT_NAME} PUBLIC
-        SAP_PLATFORM_MAKENAME=ntintel
-        SAPonNT
-        _CRT_NON_CONFORMING_SWPRINTFS
-        _CRT_SECURE_NO_DEPRECATES
-        _CRT_SECURE_NO_WARNINGS
-        _CRT_NONSTDC_NO_DEPRECATE
-        _AFXDLL
-        WIN32
-        _WIN32_WINNT=0x0502
-        WIN64
-        _AMD64_
-        _ATL_ALLOW_CHAR_UNSIGNED
-    )
-
     target_compile_options(${PROJECT_NAME} PUBLIC
         -EHs
         -Gy
@@ -180,16 +157,51 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
         /we4552 /we4700 /we4789
     )
 
+    target_compile_definitions(${PROJECT_NAME} PUBLIC
+        SAP_PLATFORM_MAKENAME=ntintel
+        SAPonNT
+        _CRT_NON_CONFORMING_SWPRINTFS
+        _CRT_SECURE_NO_DEPRECATE
+        #_CRT_SECURE_NO_WARNINGS
+        _CRT_NONSTDC_NO_DEPRECATE
+        _AFXDLL
+        WIN32
+        _WIN32_WINNT=0x0502
+        _ATL_ALLOW_CHAR_UNSIGNED
+    )
 
     target_link_options(${PROJECT_NAME} PUBLIC
-        -NXCOMPAT -STACK:0x2000000 -SWAPRUN:NET -DEBUG
-        -OPT:REF -DEBUGTYPE:CV,FIXUP -MACHINE:amd64 -nologo
+        -NXCOMPAT
+		-SWAPRUN:NET
+		-OPT:REF
+		-nologo
         -LTCG
     )
 
+    if (${NODE_ARCH} STREQUAL "ia32")
+        target_compile_definitions(${PROJECT_NAME} PUBLIC _X86_ )
+
+        target_link_options(${PROJECT_NAME} PUBLIC
+            -STACK:0x800000
+            -DEBUGTYPE:CV
+            -MACHINE:x86
+            -LARGEADDRESSAWARE
+        )
+    else()
+        target_compile_definitions(${PROJECT_NAME} PUBLIC WIN64 _AMD64_ )
+
+        target_link_options(${PROJECT_NAME} PUBLIC
+            -STACK:0x2000000
+            -DEBUG
+            -DEBUGTYPE:CV,FIXUP
+            -MACHINE:amd64
+        )
+    endif()
+
+
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
 
-    # display SAP NWRFC SDK version
+    # show SAP NWRFC SDK version
     execute_process(COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/ci/utils/nwrfcsdk-version-darwin.sh OUTPUT_VARIABLE SAPNWRFCSDK_VERSION)
     message("SAP NWRFC SDK: " ${SAPNWRFCSDK_VERSION})
 
@@ -208,6 +220,6 @@ set (${PROJECT_NAME}_USE_STATIC_LIBS OFF)
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
 # build target
-target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_HEADERS_DIR} ${NAPI_INCLUDE_DIR} ${SAPNWRFC_INCLUDE_DIR})
+target_include_directories(${PROJECT_NAME} PRIVATE ${NODE_HEADERS_INCLUDE_DIR} ${NAPI_INCLUDE_DIR} ${SAPNWRFC_INCLUDE_DIR})
 target_link_directories(${PROJECT_NAME} PRIVATE ${SAPNWRFC_LIB_DIR})
 target_link_libraries(${PROJECT_NAME} ${CMAKE_JS_LIB} ${SAPNWRFC_LIB_FILES})
