--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test": "test"
   },
   "scripts": {
+    "deps": "npm install --save bluebird node-addon-api",
+    "devdeps": "npm install --save-dev @babel/core @types/bluebird @types/node async cmake-js decimal.js jest prebuild prebuild-install random-bytes tslint typescript",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install --tag-prefix -r napi || npm run prebuild",
@@ -60,21 +62,21 @@
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@types/bluebird": "^3.5.27",
-    "@types/node": "^12.7.8",
-    "async": "^3.1.0",
-    "cmake-js": "^5.3.2",
+    "@babel/core": "^7.9.0",
+    "@types/bluebird": "^3.5.30",
+    "@types/node": "^13.9.2",
+    "async": "^3.2.0",
+    "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.0",
-    "jest": "^24.9.0",
-    "prebuild": "^9.1.1",
+    "jest": "^25.1.0",
+    "prebuild": "^10.0.0",
     "prebuild-install": "^5.3.3",
     "random-bytes": "^1.0.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.3"
+    "tslint": "^6.1.0",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "bluebird": "^3.5.5",
-    "node-addon-api": "^1.7.1"
+    "bluebird": "^3.7.2",
+    "node-addon-api": "^2.0.0"
   }
 }
