Multiple fixes for 1.0.7
- Safeguarding from closing the connection while RFC calls still running
- Number of running RFC calls exposed as client instance attribute
- Client logging
- Ensure Bluebird Promises used instead of native Typescript, fix #134
- Pool reopen() fixed, returning now the Client instance, just like Pool open(), fix #135
- Pool max option removed, fix #136
- Unit tests refactoring

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "deps": "npm install --save bluebird node-addon-api",
-    "devdeps": "npm install --save-dev @babel/core @types/bluebird @types/node async cmake-js decimal.js jest prebuild prebuild-install random-bytes tslint typescript",
+    "devdeps": "npm install --save-dev @babel/core typings @types/node @types/bluebird async cmake-js decimal.js jest prebuild prebuild-install random-bytes tslint typescript segfault-handler",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install --tag-prefix -r napi || npm run prebuild",
@@ -64,15 +64,16 @@
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/bluebird": "^3.5.30",
-    "@types/node": "^13.9.8",
+    "@types/node": "^13.11.1",
     "async": "^3.2.0",
     "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.0",
-    "jest": "^25.2.4",
+    "jest": "^25.3.0",
     "prebuild": "^10.0.0",
     "prebuild-install": "^5.3.3",
     "random-bytes": "^1.0.0",
-    "tslint": "^6.1.0",
+    "segfault-handler": "^1.3.0",
+    "tslint": "^6.1.1",
     "typescript": "^3.8.3"
   },
   "dependencies": {
