--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -56,8 +56,7 @@
   "files": [
     "lib",
     "src",
-    "CMakeLists.txt",
-    "VERSION"
+    "CMakeLists.txt"
   ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
