--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -28,7 +28,7 @@
     "upload": "prebuild -r napi -u --verbose",
     "wrapper": "tsc -p src/ts",
     "examples": "tsc -p examples/ts",
-    "test": "jest --testTimeout 30000 --verbose"
+    "test": "jest test"
   },
   "binary": {
     "napi_versions": [
@@ -68,6 +68,7 @@
     "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.0",
     "jest": "^25.3.0",
+    "node-inspect": "^1.11.6",
     "prebuild": "^10.0.0",
     "prebuild-install": "^5.3.3",
     "random-bytes": "^1.0.0",
