--- a/frameworks/electron-quick-start/package.json
+++ b/frameworks/electron-quick-start/package.json
@@ -4,7 +4,7 @@
   "description": "A minimal Electron application",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "RFC_INI=./sapnwrfc.ini electron ."
   },
   "repository": "https://github.com/electron/electron-quick-start",
   "keywords": [
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^9.0.0"
+  },
+  "dependencies": {
+    "node-rfc": "^1.2.0"
   }
 }
