--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "2.0.2",
+  "version": "2.0.3",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -63,9 +63,9 @@
   "devDependencies": {
     "@babel/core": "^7.10.5",
     "@types/bluebird": "^3.5.32",
-    "@types/node": "^14.0.23",
-    "@typescript-eslint/eslint-plugin": "^3.6.1",
-    "@typescript-eslint/parser": "^3.6.1",
+    "@types/node": "^14.0.26",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
     "async": "^3.2.0",
     "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.0",
@@ -79,7 +79,6 @@
   },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "node-addon-api": "^3.0.1",
-    "p-queue": "^6.6.0"
+    "node-addon-api": "^3.0.1"
   }
 }
