--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "email": "srdjan.boskovic@sap.com"
   },
   "engines": {
-    "node": "~10 >=10.20 || >=12.17",
-    "npm": "^6.11.3"
+    "node":  "~10 >=10.20 || ~12 >=12.17 || >= 14.0"
   },
   "cpu": [
     "!arm"
@@ -20,7 +19,7 @@
   },
   "scripts": {
     "deps": "npm install --save bluebird node-addon-api",
-    "devdeps": "npm install --save-dev @babel/core typings @types/node @types/bluebird async cmake-js decimal.js jest prebuild prebuild-install random-bytes eslint @typescript-eslint/parser @typescript-eslint/eslint-plugin typescript",
+    "devdeps": "npm install --save-dev @babel/core @types/node @types/bluebird @typescript-eslint/eslint-plugin @typescript-eslint/parser async cmake-js decimal.js eslint jest prebuild prebuild-install random-bytes typescript typings",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install --tag-prefix -r napi || cmake-js rebuild",
@@ -32,7 +31,7 @@
   },
   "binary": {
     "napi_versions": [
-      7
+      6,7
     ],
     "module_name": "sapnwrfc",
     "module_path": "./lib/binding/",
@@ -60,25 +59,25 @@
   ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
-  "devDependencies": {
-    "@babel/core": "^7.12.3",
-    "@types/bluebird": "^3.5.33",
-    "@types/node": "^14.14.8",
-    "@typescript-eslint/eslint-plugin": "^3.8.0",
-    "@typescript-eslint/parser": "^3.8.0",
-    "async": "^3.2.0",
-    "cmake-js": "^6.1.0",
-    "decimal.js": "^10.2.0",
-    "eslint": "^7.13.0",
-    "jest": "^26.6.3",
-    "prebuild": "^10.0.1",
-    "prebuild-install": "^5.3.6",
-    "random-bytes": "^1.0.0",
-    "typescript": "^3.9.7",
-    "typings": "^2.1.1"
-  },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "node-addon-api": "^3.0.2"
+    "node-addon-api": "^3.1.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@types/bluebird": "^3.5.33",
+    "@types/node": "^14.14.14",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
+    "async": "^3.2.0",
+    "cmake-js": "^6.1.0",
+    "decimal.js": "^10.2.1",
+    "eslint": "^7.16.0",
+    "jest": "^26.6.3",
+    "prebuild": "^10.0.1",
+    "prebuild-install": "^6.0.0",
+    "random-bytes": "^1.0.0",
+    "typescript": "^4.1.3",
+    "typings": "^2.1.1"
   }
 }
