--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "deps": "npm install --save bluebird node-addon-api",
-    "devdeps": "npm install --save-dev @babel/core @types/node @types/bluebird @typescript-eslint/eslint-plugin @typescript-eslint/parser async cmake-js decimal.js eslint jest prebuild prebuild-install random-bytes typescript typings",
+    "devdeps": "npm install --save-dev cmake-js typescript async decimal.js eslint jest prebuild prebuild-install random-bytes @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install --tag-prefix -r napi || cmake-js rebuild",
@@ -59,25 +59,24 @@
   ],
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
+  "dependencies": {
+    "bluebird": "^3.7.2",
+    "node-addon-api": "^3.1.0"
+  },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
+    "@babel/core": "^7.12.13",
     "@types/bluebird": "^3.5.33",
-    "@types/node": "^14.14.20",
-    "@typescript-eslint/eslint-plugin": "^4.13.0",
-    "@typescript-eslint/parser": "^4.13.0",
+    "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.2",
+    "@typescript-eslint/parser": "^4.14.2",
     "async": "^3.2.0",
     "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.1",
-    "eslint": "^7.17.0",
+    "eslint": "^7.19.0",
     "jest": "^26.6.3",
     "prebuild": "^10.0.1",
     "prebuild-install": "^6.0.0",
     "random-bytes": "^1.0.0",
-    "typescript": "^4.1.3",
-    "typings": "^2.1.1"
-  },
-  "dependencies": {
-    "bluebird": "^3.7.2",
-    "node-addon-api": "^3.1.0"
+    "typescript": "^4.1.3"
   }
 }
