--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "2.4.0",
+  "version": "2.4.1",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -18,8 +18,8 @@
     "test": "test"
   },
   "scripts": {
-    "deps": "npm install --save bluebird node-addon-api",
-    "devdeps": "npm install --save-dev cmake-js typescript async decimal.js eslint jest prebuild prebuild-install random-bytes @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
+    "dependencies": "npm install --save bluebird node-addon-api",
+    "devDependencies": "npm install --save-dev cmake-js typescript async decimal.js eslint jest prebuild prebuild-install random-bytes @types/node @types/bluebird @babel/core @typescript-eslint/eslint-plugin @typescript-eslint/parser",
     "prepublishOnly": "npm ls --depth=0",
     "preinstall": "npm install cmake-js prebuild-install prebuild node-addon-api",
     "install": "prebuild-install --tag-prefix -r napi || cmake-js rebuild",
@@ -64,19 +64,19 @@
     "node-addon-api": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
+    "@babel/core": "^7.13.16",
     "@types/bluebird": "^3.5.33",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.2",
-    "@typescript-eslint/parser": "^4.14.2",
+    "@types/node": "^14.14.41",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "async": "^3.2.0",
     "cmake-js": "^6.1.0",
     "decimal.js": "^10.2.1",
-    "eslint": "^7.19.0",
+    "eslint": "^7.24.0",
     "jest": "^26.6.3",
     "prebuild": "^10.0.1",
-    "prebuild-install": "^6.0.0",
+    "prebuild-install": "^6.1.1",
     "random-bytes": "^1.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.4"
   }
 }
