--- a/package.json
+++ b/package.json
@@ -61,22 +61,31 @@
   "types": "./lib/index.d.ts",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@tsconfig/node16": "^1.0.2",
     "@types/bluebird": "^3.5.36",
     "@types/node": "^16.0.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "async": "^3.2.0",
     "cmake-js": "^6.1.0",
+    "commitizen": "^4.2.4",
+    "cz-conventional-changelog": "^3.3.0",
     "decimal.js": "^10.3.1",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "prebuild": "^10.0.1",
     "prebuild-install": "^6.1.3",
     "random-bytes": "^1.0.0",
+    "ts-node": "^10.7.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
     "node-addon-api": "^4.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
