--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-rfc",
   "description": "nodejs bindings for SAP NW RFC SDK",
-  "version": "2.5.1",
+  "version": "2.6.0-rc1",
   "homepage": "https://github.com/sap/node-rfc",
   "author": {
     "name": "Srdjan Boskovic",
@@ -67,21 +67,21 @@
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
     "async": "^3.2.0",
-    "cmake-js": "^6.1.0",
+    "cmake-js": "^6.3.0",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "^3.3.0",
     "decimal.js": "^10.3.1",
     "eslint": "^7.30.0",
     "jest": "^27.0.6",
     "prebuild": "^10.0.1",
-    "prebuild-install": "^6.1.3",
+    "prebuild-install": "^6.1.4",
     "random-bytes": "^1.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
     "bluebird": "^3.7.2",
-    "node-addon-api": "^4.0.0"
+    "node-addon-api": "^4.3.0"
   },
   "config": {
     "commitizen": {
